--- a/hrms/src/main/resources/application.properties
+++ b/hrms/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/hrms
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=190533esra
 spring.jpa.properties.javax.persistence.validation.mode = none
